# D-OSTS

./: Atmospheric_Density.py  BaselineSolution.py  CoordinateTransformations.py  CrudeInitialConditions.py  ExtendedKalmanFilter.py  ExtendedKalmanFilters.py  ExtendedKalmanFilters2.py  ExtendedSolution.py  FakeTrajectoryGenerator.py  IntegratorWrapper.py  LICENSE  Main.py  MainVisual.py  MinDependencies.py  ModelDynamics.py  NumericalIntegrator.py  Predictor.py  PredictorIntegrator.py  README.md  RadarClass.py  RadarClassNew  RadarClassNew.py  RadarCombineMeasurements.py  RadarDistribution.py  RadarExample.py  Simulator.py  Visualiser.py  crash_heatmap_data.txt  crash_heatmap_data_3d.txt  crash_heatmap_data_3d_thrust.txt  data_drag.ipynb  ekf_predicted_trajectory.txt  ekf_predicted_trajectory_3d.txt  fake_radar_data.txt  initial_conditions.ipynb  noisy_radar_data.txt  noisy_radar_data_3d.txt  state_vectors_rt.csv  thrust_decision_log.txt  trajectory_3d_spherical.txt  (+2 more)
Trajectories/: 1_3d_noisy_trajectory.txt  1_3d_pred_trajectory.txt  1_3d_true_trajectory.txt  (+2 more)
dosts/: AtmosphericDensity.py  CoordinateTransformations.py  CrudeInitialConditions.py  ExtendedKalmanFilters.py  LICENSE  Main.py  MainVisual.py  ModelDynamics.py  NumericalIntegrator.py  PredictorIntegrator.py  README.md  RadarModule.py  Visualiser.py  WriteToFiles.py  __init__.py  __main__.py  pyproject.toml
dosts/Trajectories/: 1_2d_noisy_trajectory.txt  1_2d_pred_trajectory.txt  1_2d_pred_uncertainty.txt  1_2d_true_trajectory.txt  1_3d_noisy_trajectory.txt  1_3d_pred_trajectory.txt  1_3d_pred_uncertainty.txt
(+57 files in other folders)
